# fastapi-ddd

./: .gitignore  README.md  local.db  pyproject.toml
src/: main.py
src/board/application/auth/: auth_service.py
src/board/application/category/: category_dto.py  category_service.py
src/board/application/comment/: comment_dto.py  comment_service.py
src/board/application/file/: file_dto.py  file_service.py
src/board/application/post/: post_dto.py  post_service.py
src/board/application/user/: user_dto.py  user_service.py
src/board/domain/category/: category.py  category_repository.py
src/board/domain/comment/: comment.py  comment_repository.py
src/board/domain/file/: file.py  file_repository.py
src/board/domain/post/: post.py  post_aggregate.py  post_repository.py
src/board/domain/shared/: value_objects.py
src/board/domain/user/: user.py  user_repository.py  user_service.py
src/board/infrastructure/persistence/mappers/: base.py
src/board/infrastructure/persistence/sqlmodel/: category_repository.py  comment_repository.py  file_repository.py  models.py  post_repository.py  user_repository.py
src/board/interfaces/api/: dependencies.py
src/board/interfaces/api/v1/: auth_routes.py  category_routes.py  comment_routes.py  file_routes.py  post_routes.py  user_routes.py
src/core/: config.py  di_container.py
tests/: conftest.py
tests/integration/: test_post_api.py  test_user_api.py
tests/unit/application/: test_post_service.py  test_user_service.py
tests/unit/domain/: test_post.py  test_user.py
(+5 files in other folders)
