[tool.poetry]
name = "fastapi-ddd"
version = "0.1.0"
description = ""
authors = ["PrimadonnaGit <jwhyun2215@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.4"
sqlmodel = "^0.0.21"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
dependency-injector = "^4.41.0"
python-jose = "^3.3.0"
bcrypt = "^4.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
